--- a/Final-Boca/index.css
+++ b/Final-Boca/index.css
@@ -47,10 +47,10 @@
 .main__container__bodyLading__text__button {
     position: absolute;
     bottom: 26px;
+    left: 25%;
 }
 
 @media (max-width: 767px) {
-
     .main__container__bodyLading,
     .main__container__buttonsCars {
         flex-direction: column;
