--- a/Final-Boca/index.css
+++ b/Final-Boca/index.css
@@ -59,7 +59,7 @@
 
     .btn_Style_Venta_Per {
         width: 91%;
-        margin: auto;
+        margin: 3px auto;
         left: inherit;
     }
 }
