--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -58,6 +58,7 @@
     height: auto;
     background-size: 100% auto;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .container__conocer__cupones {
