--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -843,6 +843,6 @@ source>img {
     text-decoration: revert;
 }
 
-#main-menu-products > ul > li:nth-child(4){
+/* #main-menu-products > ul > li:nth-child(4){
     display: none;
-  }
+  } */
