--- a/MULT-445/style.css
+++ b/MULT-445/style.css
@@ -2,4 +2,9 @@
 .carrusel__anterior.btnLeft, .carrusel__anterior.btnLeft2, .carrusel__anterior.btnLeft3, .btnRight, .btnRight2, .btnRight3 {
     display: none;
 }
+
+
+.main_conteiner__s2_bannerTravelSale {
+    display: none;
+}
   
