commented out display none to boxex old

--- a/MULT-445/style.css
+++ b/MULT-445/style.css
@@ -10,6 +10,6 @@
    */
 
 
-   .carrusel__elemento.glider-slide.center.visible {
+   /* .carrusel__elemento.glider-slide.center.visible {
     display: none;
-}
+} */
