Width change only for desktop

--- a/MULT-445/style.css
+++ b/MULT-445/style.css
@@ -11,8 +11,9 @@
     display: none;
 }
 
-.glider-track  {
-    max-width: 100%!important;
+
+@media (min-width: 768px) { /* Adjust this breakpoint as needed */
+    .glider-track  {
+        max-width: 100%!important;
+    }
 }
-
-
