--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -280,7 +280,8 @@
     background-color: #d3eaff;
     padding: 1rem;
     position: relative;
-    min-height: 400px;
+    min-height: 180px;
+    height: 180px;
 }
 
 .main__container_app_components__ofertas>h2 {
