--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -938,12 +938,14 @@
 }
 
 .info-card__title a {
-  display: -webkit-box;
-  display: box;
   -webkit-box-orient: vertical;
-  line-clamp: 1;
+  -moz-box-orient: vertical;
+  -ms-box-orient: vertical;
+  box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
 }
 
 @media (max-width: 767px) {
